--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5"
+    "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^4.11.3"
   }
 }
