--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,10 @@
 {
   "packages": [
-    "packages/*"
+    "packages/*",
+    "backend",
+    "frontend"
   ],
   "version": "independent",
   "private": true,
-  "npmClient": "yarn",
   "useWorkspaces" : true
 }
